fixing contrast

--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -1,3 +1,4 @@
+/* fixes for low contrast defaults in bootstrap */
 .navbar {
     border-radius: 0;
 }
@@ -6,6 +7,11 @@
 .navbar-default .navbar-brand {
     color: #707070;
 }
+
+a {
+    color: #3277B3;
+}
+
 
 html, body {
     height: 100%;
